--- a/signal.html
+++ b/signal.html
@@ -10,8 +10,7 @@
 body{background:#000;color:#0f0;overflow-x:hidden;display:flex;justify-content:center;padding-top:20px;}
 #matrix{position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1;}
 .panel{width:90%;max-width:900px;background:rgba(0,0,0,0.6);border:1px solid #0f0;padding:30px 28px;border-radius:12px;backdrop-filter:blur(6px);box-shadow:0 0 35px rgba(0,255,0,0.12);display:flex;flex-direction:column;}
-.title{text-align:center;font-size:24px;margin-bottom:12px;text-shadow:0 0 12px #0f0;font-weight:bold;cursor:pointer;}
-.licenseStatus{text-align:center;font-size:14px;margin-bottom:20px;}
+.title{text-align:center;font-size:24px;margin-bottom:24px;text-shadow:0 0 12px #0f0;font-weight:bold;cursor:pointer;}
 .row{display:flex;flex-direction:column;gap:12px;margin-bottom:16px}
 .row label{font-size:15px;color:#0f0;font-weight:600}
 .row select,.row input{width:100%;padding:12px;background:#000;border:1px solid #0f0;color:#0f0;border-radius:8px;outline:none;font-size:14px;}
@@ -24,13 +23,13 @@ body{background:#000;color:#0f0;overflow-x:hidden;display:flex;justify-content:c
 #assetBox label:hover{background:rgba(0,255,0,0.1);box-shadow:0 0 10px #0f0;}
 #assetBox input[type="checkbox"]{accent-color:#0f0;}
 .selectAllBtn{margin-top:6px;background:rgba(0,0,0,0.6);border:1px solid #0f0;padding:6px 10px;border-radius:6px;cursor:pointer;color:#0f0;text-shadow:0 0 4px #0f0;font-size:13px;align-self:start;}
-.selectAllBtn:hover{background:rgba(0,40,0,0.7);box-shadow:0 0 10px #0f0}
+.selectAllBtn:hover{background:rgba(0,40,0,0.7);box-shadow:0 0 10px #0f0;}
 #adminPanel{display:none;margin-top:20px;padding:20px;border:2px solid #0f0;border-radius:12px;background:rgba(0,0,0,0.7);}
 #adminPanel h3{text-align:center;color:#0f0;margin-bottom:12px;}
-#adminPanel label{display:block;color:#0f0;margin:6px 0;}
-#adminPanel input{width:100%;padding:8px;margin-bottom:10px;border:1px solid #0f0;border-radius:6px;background:#000;color:#0f0;}
-#adminPanel textarea{width:100%;padding:8px;margin-bottom:10px;border:1px solid #0f0;border-radius:6px;background:#000;color:#0f0;}
-#adminPanel button{padding:8px 12px;background:#0f0;color:#000;border:none;border-radius:6px;cursor:pointer;}
+#adminPanel label{color:#0f0;margin-top:8px;}
+#adminPanel input{width:100%;padding:8px;margin-top:4px;border:1px solid #0f0;border-radius:6px;background:#000;color:#0f0;}
+#adminPanel button{margin-top:12px;padding:8px 12px;border:none;background:#0f0;color:#000;border-radius:6px;cursor:pointer;}
+.notice{margin-top:10px;padding:10px;border:1px dashed #0f0;border-radius:6px;color:#0f0;font-size:13px;}
 @media(max-width:500px){#assetBox{grid-template-columns:1fr;}.btns{flex-direction:column;}}
 </style>
 </head>
@@ -38,7 +37,7 @@ body{background:#000;color:#0f0;overflow-x:hidden;display:flex;justify-content:c
 <canvas id="matrix"></canvas>
 <div class="panel">
   <div class="title" id="panelTitle">FINORIX MATRIX — SIGNAL SYSTEM</div>
-  <div class="licenseStatus" id="licenseStatus">License: Inactive | Expires: N/A</div>
+
   <div class="row">
     <label>Time Zone (UTC)</label>
     <select id="timezone">
@@ -48,6 +47,7 @@ body{background:#000;color:#0f0;overflow-x:hidden;display:flex;justify-content:c
       <option value="7">UTC +07:00</option>
     </select>
   </div>
+
   <div class="row">
     <label>Market Type</label>
     <select id="marketType" onchange="updateAssets()">
@@ -55,11 +55,13 @@ body{background:#000;color:#0f0;overflow-x:hidden;display:flex;justify-content:c
       <option value="otc">OTC Market</option>
     </select>
   </div>
+
   <div class="row">
     <label>Assets (Tick to Select)</label>
     <div id="assetBox"></div>
     <button class="selectAllBtn" onclick="toggleSelectAll()">Select / Deselect All</button>
   </div>
+
   <div class="row">
     <label>Timeframe (Minutes)</label>
     <select id="tf">
@@ -69,107 +71,71 @@ body{background:#000;color:#0f0;overflow-x:hidden;display:flex;justify-content:c
       <option value="5">5 Minutes</option>
     </select>
   </div>
+
   <div class="row">
     <label>Number of Signals</label>
     <input id="count" type="number" value="5" min="1" />
   </div>
+
   <div class="btns">
-    <button class="btn" onclick="showLicensePopup()">⚡ GENERATE SIGNALS ⚡</button>
+    <button class="btn" onclick="onGenerateClick()">⚡ GENERATE SIGNALS ⚡</button>
     <button class="btn" onclick="copyAll()">COPY</button>
     <button class="btn" onclick="resetOut()">RESET</button>
   </div>
+
   <div class="output" id="out"></div>
+
+  <div class="notice" id="noticeBox">License Inactive</div>
 
   <!-- Admin Panel -->
   <div id="adminPanel">
     <h3>ADMIN PANEL</h3>
-    <label>Change License Duration (Days)</label>
-    <input type="number" id="adminDuration" value="10">
-    <label>Set Notice Message</label>
-    <textarea id="adminNotice" placeholder="Enter notice message here..."></textarea>
-    <button onclick="saveAdminSettings()">Save Settings</button>
+    <label>Admin Password:</label>
+    <input type="password" id="adminPass" placeholder="Enter Password">
+    <label>License Key:</label>
+    <input type="text" id="adminLicense" placeholder="Set License Key">
+    <label>Expire Days:</label>
+    <input type="number" id="adminDays" placeholder="Days of validity">
+    <button onclick="updateLicense()">Update License</button>
     <button onclick="hideAdmin()">Close Admin Panel</button>
   </div>
 </div>
 
 <script>
 // -------------------- Matrix Effect --------------------
-const c=document.getElementById('matrix');
-const ctx=c.getContext('2d');
-let fontSize=16;
-let cols=Math.floor(window.innerWidth/fontSize);
-let drops=[];
-function resize(){c.width=window.innerWidth;c.height=window.innerHeight;cols=Math.floor(c.width/fontSize);drops=[];for(let x=0;x<cols;x++)drops[x]=1;}
-function initMatrix(){resize();setInterval(draw,40);}
-const matrixChars='アカサタナハマヤラワ0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ'.split('');
-function draw(){ctx.fillStyle='rgba(0,0,0,0.05)';ctx.fillRect(0,0,c.width,c.height);ctx.fillStyle='#0f0';ctx.font=fontSize+'px Share Tech Mono';for(let i=0;i<drops.length;i++){let text=matrixChars[Math.floor(Math.random()*matrixChars.length)];ctx.fillText(text,i*fontSize,drops[i]*fontSize);if(drops[i]*fontSize>c.height && Math.random()>0.975) drops[i]=0; drops[i]++;}}
-window.addEventListener('resize',initMatrix);initMatrix();
+const c=document.getElementById('matrix');const ctx=c.getContext('2d');let fontSize=16;let cols=Math.floor(window.innerWidth/fontSize);let drops=[];function resize(){c.width=window.innerWidth;c.height=window.innerHeight;cols=Math.floor(c.width/fontSize);drops=[];for(let x=0;x<cols;x++)drops[x]=1;}function initMatrix(){resize();setInterval(draw,40);}const matrixChars='アカサタナハマヤラワ0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ'.split('');function draw(){ctx.fillStyle='rgba(0,0,0,0.05)';ctx.fillRect(0,0,c.width,c.height);ctx.fillStyle='#0f0';ctx.font=fontSize+'px Share Tech Mono';for(let i=0;i<drops.length;i++){let text=matrixChars[Math.floor(Math.random()*matrixChars.length)];ctx.fillText(text,i*fontSize,drops[i]*fontSize);if(drops[i]*fontSize>c.height && Math.random()>0.975) drops[i]=0;drops[i]++;}}window.addEventListener('resize',initMatrix);initMatrix();
 
 // -------------------- Signal System --------------------
-const realAssets = ["EUR/USD","GBP/USD","USD/JPY","AUD/JPY","EUR/JPY","GBP/JPY","USD/CAD","AUD/CAD","EUR/GBP","USD/CHF"];
-const otcAssets = ["NZD/USD (OTC)"];
+const realAssets=["EUR/USD","GBP/USD","USD/JPY","AUD/JPY","EUR/JPY","GBP/JPY","USD/CAD","AUD/CAD","EUR/GBP","USD/CHF"];
+const otcAssets=["NZD/USD (OTC)"];
 function updateAssets(){const type=document.getElementById('marketType').value;const box=document.getElementById('assetBox');box.innerHTML='';const assets=type==='real'?realAssets:otcAssets;assets.forEach(a=>{const label=document.createElement('label');const input=document.createElement('input');input.type='checkbox';input.value=a;label.appendChild(document.createTextNode(a));label.appendChild(input);box.appendChild(label);});}
 updateAssets();
 function randomAsset(selectedAssets){return selectedAssets.length>0?selectedAssets[Math.floor(Math.random()*selectedAssets.length)]:realAssets[Math.floor(Math.random()*realAssets.length)];}
-function generateSignals(count){const signalBox=document.getElementById("out");signalBox.textContent="";const checkboxes=document.querySelectorAll('#assetBox input[type="checkbox"]');const selectedAssets=Array.from(checkboxes).filter(c=>c.checked).map(c=>c.value);let current=new Date();const tzOffset=parseInt(document.getElementById('timezone').value)||0;current.setHours(current.getUTCHours()+tzOffset);let output=`▶️ DATE: ${current.toLocaleDateString('en-GB').replace(/\//g,'.')} ◀️\n\n⏰ UTC ${tzOffset>=0?'+':'-'}${tzOffset}:00 ; MTG :- 1 STEP➕\n\n          😈 FINORIX MATRIX 😈\n\n⌛️ ${document.getElementById('tf').value} Minutes\n\n`;for(let i=0;i<count;i++){const gap=Math.floor(Math.random()*6)+3; current.setMinutes(current.getMinutes()+gap);const t=current.toTimeString().substring(0,5);const asset=randomAsset(selectedAssets);const dir=Math.random()>0.5?'CALL':'PUT';output+=`${asset}  | ${t} | ${dir}\n`;}output+=`\n            ━━━━━━・━━━━━━\n😈 Avoid signal after Doji, <80%, Gap, or 3–4 B2B opposite candles 😈\n            ━━━━━━・━━━━━━`;typeWrite(output,signalBox);}
+function generateSignals(count){const signalBox=document.getElementById("out");signalBox.textContent="";const checkboxes=document.querySelectorAll('#assetBox input[type="checkbox"]');const selectedAssets=Array.from(checkboxes).filter(c=>c.checked).map(c=>c.value);let current=new Date();const tzOffset=parseInt(document.getElementById('timezone').value)||0;current.setHours(current.getUTCHours()+tzOffset);let output=`▶️ DATE: ${current.toLocaleDateString('en-GB').replace(/\//g,'.')} ◀️\n\n⏰ UTC ${tzOffset>=0?'+':'-'}${tzOffset}:00 ; MTG :- 1 STEP➕\n\n          😈 FINORIX MATRIX 😈\n\n⌛️ ${document.getElementById('tf').value} Minutes\n\n`;for(let i=0;i<count;i++){const gap=Math.floor(Math.random()*6)+3;current.setMinutes(current.getMinutes()+gap);const t=current.toTimeString().substring(0,5);const asset=randomAsset(selectedAssets);const dir=Math.random()>0.5?'CALL':'PUT';output+=`${asset}  | ${t} | ${dir}\n`;}output+=`\n            ━━━━━━・━━━━━━\n😈 Avoid signal after Doji, <80%, Gap, or 3–4 B2B opposite candles 😈\n            ━━━━━━・━━━━━━`;typeWrite(output,signalBox);}
 function typeWrite(text,element){let index=0;element.textContent="";function type(){if(index<text.length){element.textContent+=text.charAt(index);index++;setTimeout(type,15);}}type();}
 function copyAll(){navigator.clipboard.writeText(document.getElementById('out').textContent);}
 function resetOut(){document.getElementById('out').textContent='';}
 function toggleSelectAll(){const checkboxes=document.querySelectorAll('#assetBox input[type="checkbox"]');const allChecked=Array.from(checkboxes).every(c=>c.checked);checkboxes.forEach(c=>c.checked=!allChecked);}
 
 // -------------------- License System --------------------
-const licenseKey="@FINORIXMATRIX";
+let licenseKey="@FINORIXMATRIX@";
 let licenseExpiry=null;
-let noticeMsg="";
-
-function isLicenseActive(){if(!licenseExpiry) return false;return new Date() < licenseExpiry;}
-function updateLicenseStatus(){const status=document.getElementById('licenseStatus');if(isLicenseActive()){status.textContent=`License: Active | Expires: ${licenseExpiry.toLocaleDateString()}${noticeMsg?` | Notice: ${noticeMsg}`:""}`;} else{status.textContent="License: Inactive | Expires: N/A";}}
-
-function showLicensePopup(){
-    const overlay=document.createElement("div");overlay.style.cssText="position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.9);display:flex;justify-content:center;align-items:center;z-index:9999";
-    const box=document.createElement("div");box.style.cssText="background:#000;border:2px solid #0f0;padding:30px;border-radius:12px;max-width:400px;width:90%;color:#0f0;font-family:'Share Tech Mono',monospace;text-align:center;box-shadow:0 0 25px #0f0";
-    box.innerHTML=`
-      <h2>🛡 Hacking System 🛡</h2>
-      <p>Enter your <b>License Key</b> below to access signals.</p>
-      <input type="text" id="popupLicense" placeholder="Enter License Key" style="width:90%;padding:10px;margin:10px 0;background:#000;border:1px solid #0f0;color:#0f0;border-radius:6px;font-size:14px;">
-      <p>Create account → <a href="https://broker-qx.pro/sign-up/?lid=1508486" target="_blank" style="color:#0f0;text-decoration:underline;font-weight:bold;">Click Here</a></p>
-      <p>Deposit <b>20$</b> to get your license.</p>
-      <p>Contact on Telegram → <a href="https://t.me/traderParvej" target="_blank" style="color:#0f0;text-decoration:underline;font-weight:bold;">@traderParvej</a></p>
-      <button id="popupSubmit" style="margin-top:12px;padding:10px 20px;background:linear-gradient(90deg,#00ff0f,#00cc8a);border:none;color:#000;font-weight:bold;border-radius:8px;cursor:pointer;">Submit</button>
-      <button id="popupClose" style="margin-top:12px;padding:8px 15px;background:#000;border:1px solid #0f0;color:#0f0;border-radius:8px;cursor:pointer;margin-left:10px;">Close</button>
-    `;
-    overlay.appendChild(box);document.body.appendChild(overlay);
-    document.getElementById("popupClose").onclick=()=>{document.body.removeChild(overlay);}
-    document.getElementById("popupSubmit").onclick=()=>{
-        const val=document.getElementById("popupLicense").value.trim();
-        if(val===licenseKey){licenseExpiry=new Date();licenseExpiry.setDate(licenseExpiry.getDate()+10);updateLicenseStatus();document.body.removeChild(overlay);generateSignals(parseInt(document.getElementById('count').value)||5);}
-        else alert("Invalid License!");
-    }
-}
-updateLicenseStatus();
+function loadLicense(){const data=JSON.parse(localStorage.getItem("license")||'{}');licenseKey=data.key||"@FINORIXMATRIX@";licenseExpiry=data.expiry?new Date(data.expiry):null;updateNotice();}
+function saveLicense(){localStorage.setItem("license",JSON.stringify({key:licenseKey,expiry:licenseExpiry}));updateNotice();}
+function updateNotice(){const notice=document.getElementById("noticeBox");if(!licenseExpiry || new Date()>licenseExpiry){notice.textContent="License Inactive";}else{notice.textContent=`License Active — Expires: ${licenseExpiry.toLocaleDateString()}`;}}
+function onGenerateClick(){if(!licenseExpiry || new Date()>licenseExpiry){showLicensePopup();}else{generateSignals(parseInt(document.getElementById('count').value)||5);}}
+function showLicensePopup(){const overlay=document.createElement("div");overlay.style.cssText="position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.9);display:flex;justify-content:center;align-items:center;z-index:9999";const box=document.createElement("div");box.style.cssText="background:#000;border:2px solid #0f0;padding:30px;border-radius:12px;max-width:400px;width:90%;color:#0f0;font-family:'Share Tech Mono',monospace;text-align:center;box-shadow:0 0 25px #0f0";box.innerHTML=`<h2>🛡 Hacking System 🛡</h2><p>Enter your <b>License Key</b> below to access signals.</p><input type="text" id="popupLicense" placeholder="Enter License Key" style="width:90%;padding:10px;margin:10px 0;background:#000;border:1px solid #0f0;color:#0f0;border-radius:6px;font-size:14px;"><p>Create account → <a href="https://broker-qx.pro/sign-up/?lid=1508486" target="_blank" style="color:#0f0;text-decoration:underline;font-weight:bold;">Click Here</a></p><p>Deposit <b>20$</b> to get your license.</p><p>Contact on Telegram → <a href="https://t.me/traderParvej" target="_blank" style="color:#0f0;text-decoration:underline;font-weight:bold;">@traderParvej</a></p><button id="popupSubmit" style="margin-top:12px;padding:10px 20px;background:linear-gradient(90deg,#00ff0f,#00cc8a);border:none;color:#000;font-weight:bold;border-radius:8px;cursor:pointer;">Submit</button><button id="popupClose" style="margin-top:12px;padding:8px 15px;background:#000;border:1px solid #0f0;color:#0f0;border-radius:8px;cursor:pointer;margin-left:10px;">Close</button>`;overlay.appendChild(box);document.body.appendChild(overlay);
+document.getElementById("popupClose").onclick=()=>{document.body.removeChild(overlay);}
+document.getElementById("popupSubmit").onclick=()=>{const key=document.getElementById("popupLicense").value.trim();if(key===licenseKey){licenseExpiry=new Date();licenseExpiry.setDate(licenseExpiry.getDate()+10);saveLicense();document.body.removeChild(overlay);generateSignals(parseInt(document.getElementById('count').value)||5);}else{alert("Invalid License Key!");}}}
+loadLicense();
 
 // -------------------- Admin Panel --------------------
-let adminClickCount=0;
-const panelTitle=document.getElementById('panelTitle');
-panelTitle.addEventListener('click',()=>{
-  adminClickCount++;
-  if(adminClickCount>=5){
-      adminClickCount=0;
-      const pass=prompt("Enter Admin Password:");
-      if(pass==="@TraderParvej@"){
-        document.getElementById("adminPanel").style.display="block";
-        document.getElementById("adminDuration").value=10;
-        document.getElementById("adminNotice").value=noticeMsg;
-      } else alert("Wrong Password!");
-  }
-});
-function hideAdmin(){document.getElementById("adminPanel").style.display="none";}
-function saveAdminSettings(){
-    const days=parseInt(document.getElementById("adminDuration").value)||10;
-    noticeMsg=document.getElementById("adminNotice").value.trim();
-    if(isLicenseActive()){licenseExpiry=new Date();licenseExpiry.setDate(licenseExpiry.getDate()+days);}
-    updateLicenseStatus();alert("Settings Saved!");hideAdmin();
-}
+let adminClick=0;
+const adminPanel=document.getElementById("adminPanel");
+document.getElementById("panelTitle").addEventListener("click",()=>{adminClick++;if(adminClick>=5){adminClick=0;adminPanel.style.display="block";}});
+function hideAdmin(){adminPanel.style.display="none";}
+function updateLicense(){const pass=document.getElementById("adminPass").value.trim();if(pass!=="@TraderParvej@"){alert("Wrong Password!");return;}const newKey=document.getElementById("adminLicense").value.trim();const days=parseInt(document.getElementById("adminDays").value);if(newKey){licenseKey=newKey;}if(days && days>0){licenseExpiry=new Date();licenseExpiry.setDate(licenseExpiry.getDate()+days);}saveLicense();alert("License Updated Successfully!");}
+
 </script>
 </body>
 </html>
