--- a/signal.html
+++ b/signal.html
@@ -9,8 +9,9 @@
 *{margin:0;padding:0;box-sizing:border-box;font-family:'Share Tech Mono', monospace}
 body{background:#000;color:#0f0;overflow-x:hidden;display:flex;justify-content:center;padding-top:20px;}
 #matrix{position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1;}
-.panel{width:90%;max-width:900px;background:rgba(0,0,0,0.6);border:1px solid #0f0;padding:30px;border-radius:12px;backdrop-filter:blur(6px);box-shadow:0 0 35px rgba(0,255,0,0.12);display:flex;flex-direction:column;}
-.title{text-align:center;font-size:24px;margin-bottom:24px;text-shadow:0 0 12px #0f0;font-weight:bold;cursor:pointer;}
+.panel{width:90%;max-width:900px;background:rgba(0,0,0,0.6);border:1px solid #0f0;padding:30px 28px;border-radius:12px;backdrop-filter:blur(6px);box-shadow:0 0 35px rgba(0,255,0,0.12);display:flex;flex-direction:column;}
+.title{text-align:center;font-size:24px;margin-bottom:12px;text-shadow:0 0 12px #0f0;font-weight:bold;cursor:pointer;}
+.licenseStatus{text-align:center;font-size:14px;margin-bottom:20px;}
 .row{display:flex;flex-direction:column;gap:12px;margin-bottom:16px}
 .row label{font-size:15px;color:#0f0;font-weight:600}
 .row select,.row input{width:100%;padding:12px;background:#000;border:1px solid #0f0;color:#0f0;border-radius:8px;outline:none;font-size:14px;}
@@ -23,25 +24,30 @@ body{background:#000;color:#0f0;overflow-x:hidden;display:flex;justify-content:c
 #assetBox label:hover{background:rgba(0,255,0,0.1);box-shadow:0 0 10px #0f0;}
 #assetBox input[type="checkbox"]{accent-color:#0f0;}
 .selectAllBtn{margin-top:6px;background:rgba(0,0,0,0.6);border:1px solid #0f0;padding:6px 10px;border-radius:6px;cursor:pointer;color:#0f0;text-shadow:0 0 4px #0f0;font-size:13px;align-self:start;}
+.selectAllBtn:hover{background:rgba(0,40,0,0.7);box-shadow:0 0 10px #0f0}
 #adminPanel{display:none;margin-top:20px;padding:20px;border:2px solid #0f0;border-radius:12px;background:rgba(0,0,0,0.7);}
 #adminPanel h3{text-align:center;color:#0f0;margin-bottom:12px;}
-.notice{margin-top:10px;padding:10px;border:1px dashed #0f0;border-radius:6px;color:#0f0;font-size:13px;}
-.popup{position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.9);display:flex;justify-content:center;align-items:center;z-index:9999;}
-.popup-box{background:#000;border:2px solid #0f0;padding:25px;border-radius:12px;width:85%;max-width:380px;text-align:center;box-shadow:0 0 25px #0f0;}
-.popup-box h2{margin-bottom:10px;}
-.popup input{width:88%;padding:10px;margin-top:10px;background:#000;border:1px solid #0f0;color:#0f0;border-radius:6px;}
-.popup button{margin-top:12px;padding:10px 20px;background:linear-gradient(90deg,#00ff0f,#00cc8a);border:none;color:#000;font-weight:bold;border-radius:8px;cursor:pointer;}
+#adminPanel label{display:block;color:#0f0;margin:6px 0;}
+#adminPanel input{width:100%;padding:8px;margin-bottom:10px;border:1px solid #0f0;border-radius:6px;background:#000;color:#0f0;}
+#adminPanel textarea{width:100%;padding:8px;margin-bottom:10px;border:1px solid #0f0;border-radius:6px;background:#000;color:#0f0;}
+#adminPanel button{padding:8px 12px;background:#0f0;color:#000;border:none;border-radius:6px;cursor:pointer;}
+@media(max-width:500px){#assetBox{grid-template-columns:1fr;}.btns{flex-direction:column;}}
 </style>
 </head>
-
 <body>
-
 <canvas id="matrix"></canvas>
-
 <div class="panel">
-
   <div class="title" id="panelTitle">FINORIX MATRIX — SIGNAL SYSTEM</div>
-
+  <div class="licenseStatus" id="licenseStatus">License: Inactive | Expires: N/A</div>
+  <div class="row">
+    <label>Time Zone (UTC)</label>
+    <select id="timezone">
+      <option value="6" selected>Bangladesh (UTC +06:00)</option>
+      <option value="5">Pakistan (UTC +05:00)</option>
+      <option value="0">UTC +00:00</option>
+      <option value="7">UTC +07:00</option>
+    </select>
+  </div>
   <div class="row">
     <label>Market Type</label>
     <select id="marketType" onchange="updateAssets()">
@@ -49,15 +55,13 @@ body{background:#000;color:#0f0;overflow-x:hidden;display:flex;justify-content:c
       <option value="otc">OTC Market</option>
     </select>
   </div>
-
   <div class="row">
-    <label>Assets</label>
+    <label>Assets (Tick to Select)</label>
     <div id="assetBox"></div>
     <button class="selectAllBtn" onclick="toggleSelectAll()">Select / Deselect All</button>
   </div>
-
   <div class="row">
-    <label>Timeframe</label>
+    <label>Timeframe (Minutes)</label>
     <select id="tf">
       <option value="1">1 Minute</option>
       <option value="2">2 Minutes</option>
@@ -65,174 +69,107 @@ body{background:#000;color:#0f0;overflow-x:hidden;display:flex;justify-content:c
       <option value="5">5 Minutes</option>
     </select>
   </div>
-
   <div class="row">
     <label>Number of Signals</label>
-    <input id="count" type="number" min="1" value="5">
+    <input id="count" type="number" value="5" min="1" />
   </div>
-
   <div class="btns">
-    <button class="btn" onclick="onGenerateClick()">GENERATE</button>
+    <button class="btn" onclick="showLicensePopup()">⚡ GENERATE SIGNALS ⚡</button>
     <button class="btn" onclick="copyAll()">COPY</button>
     <button class="btn" onclick="resetOut()">RESET</button>
   </div>
-
   <div class="output" id="out"></div>
 
-  <div class="notice" id="noticeBox">License Inactive</div>
-
+  <!-- Admin Panel -->
   <div id="adminPanel">
     <h3>ADMIN PANEL</h3>
-    <label>Password</label>
-    <input type="password" id="adminPass">
-    <label>License Key</label>
-    <input type="text" id="adminLicense">
-    <label>Expire Days</label>
-    <input type="number" id="adminDays">
-    <button onclick="updateLicense()">Update</button>
-    <button onclick="hideAdmin()">Close</button>
+    <label>Change License Duration (Days)</label>
+    <input type="number" id="adminDuration" value="10">
+    <label>Set Notice Message</label>
+    <textarea id="adminNotice" placeholder="Enter notice message here..."></textarea>
+    <button onclick="saveAdminSettings()">Save Settings</button>
+    <button onclick="hideAdmin()">Close Admin Panel</button>
   </div>
-
 </div>
 
 <script>
-// ---------------- MATRIX ----------------
+// -------------------- Matrix Effect --------------------
 const c=document.getElementById('matrix');
 const ctx=c.getContext('2d');
 let fontSize=16;
+let cols=Math.floor(window.innerWidth/fontSize);
 let drops=[];
-function resize(){c.width=innerWidth;c.height=innerHeight;
-let cols=Math.floor(c.width/fontSize);drops=[];
-for(let i=0;i<cols;i++) drops[i]=1;}
-resize();setInterval(draw,40);
-function draw(){
-ctx.fillStyle='rgba(0,0,0,0.05)';ctx.fillRect(0,0,c.width,c.height);
-ctx.fillStyle='#0f0';ctx.font=fontSize+'px Share Tech Mono';
-const chars='アカサタナハマ0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ';
-for(let i=0;i<drops.length;i++){
-let ch=chars[Math.floor(Math.random()*chars.length)];
-ctx.fillText(ch,i*fontSize,drops[i]*fontSize);
-if(drops[i]*fontSize>c.height && Math.random()>0.975) drops[i]=0;
-drops[i]++;}}
-addEventListener('resize',resize);
+function resize(){c.width=window.innerWidth;c.height=window.innerHeight;cols=Math.floor(c.width/fontSize);drops=[];for(let x=0;x<cols;x++)drops[x]=1;}
+function initMatrix(){resize();setInterval(draw,40);}
+const matrixChars='アカサタナハマヤラワ0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ'.split('');
+function draw(){ctx.fillStyle='rgba(0,0,0,0.05)';ctx.fillRect(0,0,c.width,c.height);ctx.fillStyle='#0f0';ctx.font=fontSize+'px Share Tech Mono';for(let i=0;i<drops.length;i++){let text=matrixChars[Math.floor(Math.random()*matrixChars.length)];ctx.fillText(text,i*fontSize,drops[i]*fontSize);if(drops[i]*fontSize>c.height && Math.random()>0.975) drops[i]=0; drops[i]++;}}
+window.addEventListener('resize',initMatrix);initMatrix();
 
-// ---------------- ASSETS ----------------
-const realAssets=["EUR/USD","GBP/USD","USD/JPY","AUD/JPY","EUR/JPY","GBP/JPY","USD/CAD","AUD/CAD","EUR/GBP","USD/CHF"];
-const otcAssets=["NZD/USD (OTC)"];
-function updateAssets(){
-const type=document.getElementById("marketType").value;
-const box=document.getElementById("assetBox");
-box.innerHTML="";
-(type==="real"?realAssets:otcAssets).forEach(a=>{
-box.innerHTML+=`<label>${a}<input type="checkbox" value="${a}"></label>`;
-});
-}
+// -------------------- Signal System --------------------
+const realAssets = ["EUR/USD","GBP/USD","USD/JPY","AUD/JPY","EUR/JPY","GBP/JPY","USD/CAD","AUD/CAD","EUR/GBP","USD/CHF"];
+const otcAssets = ["NZD/USD (OTC)"];
+function updateAssets(){const type=document.getElementById('marketType').value;const box=document.getElementById('assetBox');box.innerHTML='';const assets=type==='real'?realAssets:otcAssets;assets.forEach(a=>{const label=document.createElement('label');const input=document.createElement('input');input.type='checkbox';input.value=a;label.appendChild(document.createTextNode(a));label.appendChild(input);box.appendChild(label);});}
 updateAssets();
-function toggleSelectAll(){
-const boxes=document.querySelectorAll("#assetBox input");
-const all=Array.from(boxes).every(b=>b.checked);
-boxes.forEach(b=>b.checked=!all);
-}
+function randomAsset(selectedAssets){return selectedAssets.length>0?selectedAssets[Math.floor(Math.random()*selectedAssets.length)]:realAssets[Math.floor(Math.random()*realAssets.length)];}
+function generateSignals(count){const signalBox=document.getElementById("out");signalBox.textContent="";const checkboxes=document.querySelectorAll('#assetBox input[type="checkbox"]');const selectedAssets=Array.from(checkboxes).filter(c=>c.checked).map(c=>c.value);let current=new Date();const tzOffset=parseInt(document.getElementById('timezone').value)||0;current.setHours(current.getUTCHours()+tzOffset);let output=`▶️ DATE: ${current.toLocaleDateString('en-GB').replace(/\//g,'.')} ◀️\n\n⏰ UTC ${tzOffset>=0?'+':'-'}${tzOffset}:00 ; MTG :- 1 STEP➕\n\n          😈 FINORIX MATRIX 😈\n\n⌛️ ${document.getElementById('tf').value} Minutes\n\n`;for(let i=0;i<count;i++){const gap=Math.floor(Math.random()*6)+3; current.setMinutes(current.getMinutes()+gap);const t=current.toTimeString().substring(0,5);const asset=randomAsset(selectedAssets);const dir=Math.random()>0.5?'CALL':'PUT';output+=`${asset}  | ${t} | ${dir}\n`;}output+=`\n            ━━━━━━・━━━━━━\n😈 Avoid signal after Doji, <80%, Gap, or 3–4 B2B opposite candles 😈\n            ━━━━━━・━━━━━━`;typeWrite(output,signalBox);}
+function typeWrite(text,element){let index=0;element.textContent="";function type(){if(index<text.length){element.textContent+=text.charAt(index);index++;setTimeout(type,15);}}type();}
+function copyAll(){navigator.clipboard.writeText(document.getElementById('out').textContent);}
+function resetOut(){document.getElementById('out').textContent='';}
+function toggleSelectAll(){const checkboxes=document.querySelectorAll('#assetBox input[type="checkbox"]');const allChecked=Array.from(checkboxes).every(c=>c.checked);checkboxes.forEach(c=>c.checked=!allChecked);}
 
-// ---------------- SIGNAL GEN ----------------
-function randomFrom(arr){
-return arr[Math.floor(Math.random()*arr.length)];
-}
-function generateSignals(count){
-let out=document.getElementById("out");
-out.textContent="";
-let selected=Array.from(document.querySelectorAll("#assetBox input:checked")).map(x=>x.value);
-let now=new Date();
-let txt="";
-for(let i=0;i<count;i++){
-let gap=Math.floor(Math.random()*3)+1;
-now.setMinutes(now.getMinutes()+gap);
-let t=now.toTimeString().substring(0,5);
-let asset=selected.length?randomFrom(selected):randomFrom(realAssets);
-txt+=`${asset} | ${t} | Follow previous candle\n`;
-}
-out.textContent=txt;
-}
-function copyAll(){navigator.clipboard.writeText(out.textContent);}
-function resetOut(){out.textContent="";}
-
-// ---------------- LICENSE SYSTEM ----------------
-let licenseKey="@FINORIXMATRIX@";
+// -------------------- License System --------------------
+const licenseKey="@FINORIXMATRIX";
 let licenseExpiry=null;
+let noticeMsg="";
 
-function loadLicense(){
-let data=JSON.parse(localStorage.getItem("FIN_LICENSE")||"{}");
-licenseKey=data.key||"@FINORIXMATRIX@";
-licenseExpiry=data.expiry?new Date(data.expiry):null;
-updateNotice();
-}
-function saveLicense(){
-localStorage.setItem("FIN_LICENSE",JSON.stringify({key:licenseKey,expiry:licenseExpiry}));
-updateNotice();
-}
-function updateNotice(){
-const n=document.getElementById("noticeBox");
-if(!licenseExpiry||new Date()>licenseExpiry){
-n.textContent="License Inactive";
-}else{
-n.textContent=`License Active — Expires: ${licenseExpiry.toLocaleDateString()}`;
-}
-}
-loadLicense();
+function isLicenseActive(){if(!licenseExpiry) return false;return new Date() < licenseExpiry;}
+function updateLicenseStatus(){const status=document.getElementById('licenseStatus');if(isLicenseActive()){status.textContent=`License: Active | Expires: ${licenseExpiry.toLocaleDateString()}${noticeMsg?` | Notice: ${noticeMsg}`:""}`;} else{status.textContent="License: Inactive | Expires: N/A";}}
 
-function onGenerateClick(){
-if(!licenseExpiry||new Date()>licenseExpiry){
-showPopup();
-}else{
-generateSignals(parseInt(count.value)||5);
+function showLicensePopup(){
+    const overlay=document.createElement("div");overlay.style.cssText="position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.9);display:flex;justify-content:center;align-items:center;z-index:9999";
+    const box=document.createElement("div");box.style.cssText="background:#000;border:2px solid #0f0;padding:30px;border-radius:12px;max-width:400px;width:90%;color:#0f0;font-family:'Share Tech Mono',monospace;text-align:center;box-shadow:0 0 25px #0f0";
+    box.innerHTML=`
+      <h2>🛡 Hacking System 🛡</h2>
+      <p>Enter your <b>License Key</b> below to access signals.</p>
+      <input type="text" id="popupLicense" placeholder="Enter License Key" style="width:90%;padding:10px;margin:10px 0;background:#000;border:1px solid #0f0;color:#0f0;border-radius:6px;font-size:14px;">
+      <p>Create account → <a href="https://broker-qx.pro/sign-up/?lid=1508486" target="_blank" style="color:#0f0;text-decoration:underline;font-weight:bold;">Click Here</a></p>
+      <p>Deposit <b>20$</b> to get your license.</p>
+      <p>Contact on Telegram → <a href="https://t.me/traderParvej" target="_blank" style="color:#0f0;text-decoration:underline;font-weight:bold;">@traderParvej</a></p>
+      <button id="popupSubmit" style="margin-top:12px;padding:10px 20px;background:linear-gradient(90deg,#00ff0f,#00cc8a);border:none;color:#000;font-weight:bold;border-radius:8px;cursor:pointer;">Submit</button>
+      <button id="popupClose" style="margin-top:12px;padding:8px 15px;background:#000;border:1px solid #0f0;color:#0f0;border-radius:8px;cursor:pointer;margin-left:10px;">Close</button>
+    `;
+    overlay.appendChild(box);document.body.appendChild(overlay);
+    document.getElementById("popupClose").onclick=()=>{document.body.removeChild(overlay);}
+    document.getElementById("popupSubmit").onclick=()=>{
+        const val=document.getElementById("popupLicense").value.trim();
+        if(val===licenseKey){licenseExpiry=new Date();licenseExpiry.setDate(licenseExpiry.getDate()+10);updateLicenseStatus();document.body.removeChild(overlay);generateSignals(parseInt(document.getElementById('count').value)||5);}
+        else alert("Invalid License!");
+    }
 }
-}
+updateLicenseStatus();
 
-// ---------------- HACKING POPUP ----------------
-function showPopup(){
-const pop=document.createElement("div");
-pop.className="popup";
-pop.innerHTML=`
-<div class="popup-box">
-<h2>⚡ BEST ACCURACY ⚡</h2>
-<p>Create Account → <a href="https://broker-qx.pro/sign-up/?lid=1508486" target="_blank">Click Here</a></p>
-<p>Deposit <b>$20</b> to get your license.</p>
-<p>Telegram → <b>@traderParvej</b></p>
-<input id="lKey" placeholder="Enter License Key">
-<button onclick="checkKey()">Submit</button>
-<button onclick="this.parentElement.parentElement.remove()">Close</button>
-</div>`;
-document.body.appendChild(pop);
-}
-
-function checkKey(){
-let key=document.getElementById("lKey").value.trim();
-if(key===licenseKey){
-licenseExpiry=new Date();
-licenseExpiry.setDate(licenseExpiry.getDate()+10);
-saveLicense();
-document.querySelector(".popup").remove();
-alert("License Activated!");
-}else alert("Invalid License Key");
-}
-
-// ---------------- ADMIN PANEL ----------------
-let clicks=0;
-panelTitle.onclick=()=>{if(++clicks>=5){adminPanel.style.display="block";clicks=0;}}
-
-function hideAdmin(){adminPanel.style.display="none";}
-
-function updateLicense(){
-if(adminPass.value!=="@TraderParvej@"){alert("Wrong Password");return;}
-if(adminLicense.value.trim()) licenseKey=adminLicense.value.trim();
-if(adminDays.value>0){
-licenseExpiry=new Date();
-licenseExpiry.setDate(licenseExpiry.getDate()+parseInt(adminDays.value));
-}
-saveLicense();
-alert("Updated!");
+// -------------------- Admin Panel --------------------
+let adminClickCount=0;
+const panelTitle=document.getElementById('panelTitle');
+panelTitle.addEventListener('click',()=>{
+  adminClickCount++;
+  if(adminClickCount>=5){
+      adminClickCount=0;
+      const pass=prompt("Enter Admin Password:");
+      if(pass==="@TraderParvej@"){
+        document.getElementById("adminPanel").style.display="block";
+        document.getElementById("adminDuration").value=10;
+        document.getElementById("adminNotice").value=noticeMsg;
+      } else alert("Wrong Password!");
+  }
+});
+function hideAdmin(){document.getElementById("adminPanel").style.display="none";}
+function saveAdminSettings(){
+    const days=parseInt(document.getElementById("adminDuration").value)||10;
+    noticeMsg=document.getElementById("adminNotice").value.trim();
+    if(isLicenseActive()){licenseExpiry=new Date();licenseExpiry.setDate(licenseExpiry.getDate()+days);}
+    updateLicenseStatus();alert("Settings Saved!");hideAdmin();
 }
 </script>
-
 </body>
 </html>
